k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boo-the-astros-service
  namespace: default
spec:
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: NodePort
  selector:
    app: boo-the-astros
