k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boo-the-astros
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - bootheastros.bobblesport.com
    secretName: boo-the-astros-secret
  rules:
  - host: bootheastros.bobblesport.com
    http:
      paths:
      - path: /
        backend:
          serviceName: boo-the-astros-service
          servicePort: 8000
